Fix table spacing and text alignment

--- a/web_client/src/components/PriceTable/PriceTable.css
+++ b/web_client/src/components/PriceTable/PriceTable.css
@@ -1,3 +1,11 @@
-.w-25 {
-  width: 25% !important;
+.w-10 {
+  width: 10% !important;
+}
+
+.w-15 {
+  width: 15% !important;
+}
+
+.w-20 {
+  width: 20% !important;
 }
